--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p class="card__price">$52.00</p>
             </div>
         </section>
-        <form class="container form__browse__submit" action="#"><input class="browse__submit" type="submit"
+        <form class="container form__browse__submit" action="catalog.html"><input class="browse__submit" type="submit"
                 value="Browse All Product"></form>
 
         <section class="container feature">
